Added documentation tags for coachcontroller
